Edit highlighted Code for Philly projects

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </p>
       <p>
         I've also pitched in on a few civic hacking projects with <a href="https://codeforphilly.org/">Code for
-          Philly</a>, where I've done things like bring school budget data <a
-          href="http://bl.ocks.org/grahamalama/raw/72d161466a1e285725fbc723215e2311/">to life</a> and help a non-profit
+          Philly</a>, where I've done things make school budget data <a
+          href="https://codeforphilly.org/projects/school_budget_aggregator">more accessible</a> and help a non-profit
         build a new <a href="https://codeforphilly.org/projects/prevention_point_unified_reporting_system">patient
           reporting system</a>.
       </p>
