Add gitlab / switch around icons

--- a/index.html
+++ b/index.html
@@ -77,23 +77,28 @@
       <h3>Let's connect:</h3>
       <div class="social__container">
         <div class="social__item">
-          <a href='https://github.com/grahamalama/' aria-label="View my Github">
-            <i class="fa fa-github-square fa-lg" aria-hidden="true"></i>
-          </a>
-        </div>
-        <div class="social__item">
-          <a href='https://twitter.com/graham_a_lama' aria-label="View my Twitter">
-            <i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>
-          </a>
-        </div>
-        <div class="social__item">
           <a href='https://www.linkedin.com/in/grahambeckley/' aria-label="View my LinkedIn">
-            <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+            <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
           </a>
         </div>
         <div class="social__item">
           <a href='mailto:graham.beckley@gmail.com' aria-label="Email me">
-            <i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i>
+            <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="social__item">
+          <a href='https://gitlab.com/graham.beckley' aria-label="View my Gitlab">
+            <i class="fa fa-gitlab fa-lg" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="social__item">
+          <a href='https://github.com/grahamalama/' aria-label="View my Github">
+            <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="social__item">
+          <a href='https://twitter.com/graham_a_lama' aria-label="View my Twitter">
+            <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
           </a>
         </div>
       </div>
