I work at Elsevier now.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <h1>Graham Beckley</h1>
     <div>
       <p>
-        I am a full-stack software engineer at <a href="https://www.promptworks.com">Promptworks</a> where I've built
-        custom, well-crafted websites and mobile applications for clients large and small.
+        I am a full-stack software engineer at <a href="https://www.elsevier.com/">Elsevier</a>
+        where I'm building clinical decision support and research tools that help healthcare
+        professionals make important decisions.
       </p>
       <p>
         I've also pitched in on a few civic hacking projects with <a href="https://codeforphilly.org/">Code for
